--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
 
           <div class="col-lg-5" data-aos="fade">
-            <img src="assets/img/office.jpg" width=90%>
+            <img src="assets/img/office3.png" width=90%>
           </div><!-- End Quote Form -->
 
         </div>
@@ -178,7 +178,7 @@
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/5.png" class="testimonial-img" alt="">
                   <h3>Rivanoor Bren </h3>
-                  <h4>SENIOR 3D ARTIST</h4>
+                  <h4>3D ARTIST</h4>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -188,7 +188,7 @@
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/5.png" class="testimonial-img" alt="">
                   <h3>Reza Oktavianoor</h3>
-                  <h4>SENIOR INTERIOR DESIGNER</h4>
+                  <h4>INTERIOR DESIGNER</h4>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -218,7 +218,7 @@
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/5.png" class="testimonial-img" alt="">
                   <h3>Akmal fatahillah</h3>
-                  <h4>JUNIOR ARCHITECT</h4>
+                  <h4>ARCHITECT</h4>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -264,7 +264,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="row justify-content-around gy-4">
-          <div class="col-lg-6 img-bg" style="background-image: url(assets/img/why-lunate.JPEG);" data-aos="zoom-in" data-aos-delay="100"></div>
+          <div class="col-lg-6 img-bg" style="background-image: url(assets/img/why-lunate.jpeg);" data-aos="zoom-in" data-aos-delay="100"></div>
 
           <div class="col-lg-5 d-flex flex-column justify-content-center">
             <h3>WHY LUNATE ?</h3>
@@ -308,39 +308,41 @@
       </div>
     </section><!-- End Alt Services Section -->
 
-	<section id="contact" class="contact">
-	  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <section id="contact" class="contact">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="section-header">
+                <h2>WORK WITH US</h2>
+              </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="info-item d-flex flex-column justify-content-center align-items-center">
+              <a href="https://wa.me/6285216910433"><i class="bi bi-whatsapp"></i></a>
+              <h3>Whatsapp</h3>
+              <p>+6285216910433</p>
+            </div>
+          </div><!-- End Info Item -->
 
-		<div class="row">
-		  <div class="col-lg-3 col-md-6">
-			<div class="info-item d-flex flex-column justify-content-center align-items-center">
-			  <a href="https://wa.me/6285216910433" target="_blank"><i class="bi bi-whatsapp"></i></a>
-			  <h3>Whatsapp</h3>
-			  <p>+6285216910433</p>
-			</div>
-		  </div><!-- End Info Item -->
+          <div class="col-lg-3 col-md-6">
+            <div class="info-item d-flex flex-column justify-content-center align-items-center">
+              <a href=mailto:lunateelementart@gmail.com><i class="bi bi-envelope"></i></a>
+              <h3>Email</h3>
+              <p>lunateelementart@gmail.com</p>
+            </div>
+          </div><!-- End Info Item -->
 
-		  <div class="col-lg-3 col-md-6">
-			<div class="info-item d-flex flex-column justify-content-center align-items-center">
-			  <a href="mailto:lunateelementart@gmail.com" target="_blank"><i class="bi bi-envelope"></i></a>
-			  <h3>Email</h3>
-			  <p>lunateelementart@gmail.com</p>
-			</div>
-		  </div><!-- End Info Item -->
+          <div class="col-lg-3 col-md-6">
+            <div class="info-item  d-flex flex-column justify-content-center align-items-center">
+              <a href=https://www.instagram.com/lunateelement><i class="bi bi-instagram"></i></a>
+              <h3>Instagram</h3>
+              <p>@lunateelement</p>
+            </div>
+          </div><!-- End Info Item -->
 
-		  <div class="col-lg-3 col-md-6">
-			<div class="info-item  d-flex flex-column justify-content-center align-items-center">
-			  <a href="https://www.instagram.com/lunateelement" target="_blank"><i class="bi bi-instagram"></i></a>
-			  <h3>Instagram</h3>
-			  <p>@lunateelement</p>
-			</div>
-		  </div><!-- End Info Item -->
+        </div>
+        </div>
 
-		</div>
-		</div>
-
-	  </div>
-	</section><!-- End Contact Section -->
+      </div>
+    </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
@@ -357,10 +359,10 @@
                 Depok, Jawa Barat, 16514
               </p>
               <div class="social-links d-flex mt-3">
-                <a href="mailto:lunateelementart@gmail.com" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-envelope"></i></a>
-                <a href="https://wa.me/6285216910433" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
-                <a href="https://www.instagram.com/lunateelement" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=100067537028468" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
+                <a href="mailto:lunateelementart@gmail.com" class="d-flex align-items-center justify-content-center"><i class="bi bi-envelope"></i></a>
+                <a href="https://wa.me/6285216910433" class="d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
+                <a href="https://www.instagram.com/lunateelement" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100067537028468" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a
               </div>
             </div>  
         </div>
@@ -370,14 +372,10 @@
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright 2022 by <strong><span>PT Lunate Elemen Artistika</span></strong>.
-          All Rights Reserved
+          &copy; Copyright 2022 by <strong><span>PT Lunate Elemen Artistika</span></strong>. All Rights Reserved
         </div>
-      </div>
-    </div>
-
+  
   <!-- End Footer -->
-
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
