--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
           <div class="col-lg-6 d-flex align-items-center" data-aos="fade-up">
             <div class="content">
               <h3>Hello from LUNATE!</h3>
-              <p>We are a professional Contractor for Interior Design and Build based in Depok, West Java.</p>
-              <p>We provide services for our Clients to design a stunning interior, build the fit-out, create the furniture, even make the 3D model and render for on-going projects. Furthermore, we integrate the execution into an inspiring space.</p>
+              <p>We are a professional Contractor for Interior Design and Building based in Depok, West Java.</p>
+              <p>We provide services for our Clients to design stunning interiors, build fit-outs, create furnitures, and even make 3D models and render for ongoing projects. 
+Furthermore, we integrate the execution into an inspiring space.</p>
             </div>
           </div>
 
@@ -237,11 +238,13 @@
         <div class="section-header">
           <h2>ABOUT US</h2>
         </div>
-        <p><b>LUNATE</b> was founded in January 2012 by a team of experienced interior design professionals. Initially focused on providing interior design and build services in Java, the company quickly expanded their operations to the islands of Bali, Sulawesi and Papua. Over the years, <b>LUNATE</b> has become a trusted partner for many clients, offering a wide range of services that include space planning, interior design, interior decoration, furniture selection and installation, construction, and project management.</p>
+        <p><b>LUNATE</b> LUNATE was founded in January 2012 by a team of experienced interior design professionals. Initially focused on providing interior design and build services in Java, the company quickly expanded its operations to the islands of Bali, Sulawesi, and Papua. 
+Over the years, LUNATE has become a trusted partner for many clients, offering a wide range of services that include space planning, interior design, interior decoration, furniture selection and installation, construction, and project management.</p>
         <br>
-        <p> The company has completed many successful projects, ranging from residential to commercial, both in Indonesia and abroad. They have worked with leading architects, designers and developers to create unique, functional and aesthetically pleasing interiors. <b>LUNATE</b> has been active in the interior design industry since its inception, being part of many prestigious projects and receiving numerous awards for their innovative designs.</p>
+        <p> The company has completed many successful projects, ranging from residential to commercial. They have worked with Indonesian leading architects, designers, and developers to create unique, functional, and aesthetically pleasing interiors.</p>
         <br>
-        <p> Today, <b>LUNATE</b> is considered one of the leading interior design and build companies in Indonesia. Their team of experienced professionals strive to provide their clients with the highest quality of service and to make sure that their clients’ projects are completed on time and within budget. </p>
+        <p> LUNATE is currently active in the interior design industry since its inception, being part of many exlusive projects.
+Their team of experienced professionals strives to provide their clients with the highest quality of service and to make sure that their clients’ projects are completed on time and within budget.</p>
       </div>
     </section><!-- End Services Section -->
 
