--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Their team of experienced professionals strives to provide their clients with th
               <i class="bi bi-check-square flex-shrink-0"></i>
               <div>
                 <h4>Good Results</h4>
-                <p>As a team, we focus on results. For us, it’s all about what adds value for our Clients and their businesses. Above all, we want our words to work for you, your business results in the right velocity.</p>
+                <p>As a team, we focus on results  with the added value for our Clients and/or their businesses.</p>
               </div>
             </div><!-- End Icon Box -->
 
@@ -285,7 +285,7 @@ Their team of experienced professionals strives to provide their clients with th
               <i class="bi bi-lightbulb flex-shrink-0"></i>
               <div>
                 <h4>Creative</h4>
-                <p>Professionally, we create a perfect living or working environment by harmonizing the flow of energies between nature, home and agility to present a unique, stunning and inspirational place.</p>
+                <p>Professionally, we create a perfect living or working environment by harmonizing the flow of energies between nature, home, and agility to present a unique, stunning, and inspirational place.</p>
               </div>
             </div><!-- End Icon Box -->
 
@@ -293,7 +293,7 @@ Their team of experienced professionals strives to provide their clients with th
               <i class="bi bi-person-heart flex-shrink-0"></i>
               <div>
                 <h4>Trusted</h4>
-                <p>We guarantee a good investment for the Clients. You have the benefit of our industry knowledge, as well as that of our preferred and trusted suppliers and trades, helping avoid financial disappointment and giving you a finished project that will delight you.</p>
+                <p>We guarantee a good investment for the Clients. You have the benefit of our industry knowledge, as well as that of our preferred and trusted suppliers and trades. This would avoid financial disappointment and present you with a finished project that will delight you.</p>
               </div>
             </div><!-- End Icon Box -->
 
@@ -335,7 +335,7 @@ Their team of experienced professionals strives to provide their clients with th
 
           <div class="col-lg-3 col-md-6">
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
-              <a href=https://www.instagram.com/lunateelement><i class="bi bi-instagram"></i></a>
+              <a href=https://www.instagram.com/lunate.elemen.artistika><i class="bi bi-instagram"></i></a>
               <h3>Instagram</h3>
               <p>@lunateelement</p>
             </div>
@@ -364,7 +364,7 @@ Their team of experienced professionals strives to provide their clients with th
               <div class="social-links d-flex mt-3">
                 <a href="mailto:lunateelementart@gmail.com" class="d-flex align-items-center justify-content-center"><i class="bi bi-envelope"></i></a>
                 <a href="https://wa.me/6285216910433" class="d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
-                <a href="https://www.instagram.com/lunateelement" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.instagram.com/lunate.elemen.artistika" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100067537028468" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a
               </div>
             </div>  
