--- a/projects.html
+++ b/projects.html
@@ -1811,7 +1811,7 @@
               <div class="social-links d-flex mt-3">
                 <a href="mailto:lunateelementart@gmail.com" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-envelope"></i></a>
                 <a href="https://wa.me/6285216910433" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
-                <a href="https://www.instagram.com/lunateelement" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.instagram.com/lunate.elemen.artistika" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100067537028468" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
               </div>
             </div>  
