--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ Their team of experienced professionals strives to provide their clients with th
                 Depok, Jawa Barat, 16514
               </p>
               <div class="social-links d-flex mt-3">
-                <a href="mailto:lunateelementart@gmail.com" class="d-flex align-items-center justify-content-center"><i class="bi bi-envelope"></i></a>
+                <a href="mailto:lunate.ea@gmail.com" class="d-flex align-items-center justify-content-center"><i class="bi bi-envelope"></i></a>
                 <a href="https://wa.me/6285216910433" class="d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
                 <a href="https://www.instagram.com/lunate.elemen.artistika" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100067537028468" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a
