--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ Their team of experienced professionals strives to provide their clients with th
 
           <div class="col-lg-3 col-md-6">
             <div class="info-item d-flex flex-column justify-content-center align-items-center">
-              <a href=mailto:lunateelementart@gmail.com><i class="bi bi-envelope"></i></a>
+              <a href=mailto:lunate.ea@gmail.com><i class="bi bi-envelope"></i></a>
               <h3>Email</h3>
               <p>lunateelementart@gmail.com</p>
             </div>
