--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ Their team of experienced professionals strives to provide their clients with th
             <div class="info-item d-flex flex-column justify-content-center align-items-center">
               <a href=mailto:lunate.ea@gmail.com><i class="bi bi-envelope"></i></a>
               <h3>Email</h3>
-              <p>lunateelementart@gmail.com</p>
+              <p>lunate.ea@gmail.com</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -337,7 +337,7 @@ Their team of experienced professionals strives to provide their clients with th
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
               <a href=https://www.instagram.com/lunate.elemen.artistika><i class="bi bi-instagram"></i></a>
               <h3>Instagram</h3>
-              <p>@lunateelement</p>
+              <p>@lunate.elemen.artistika</p>
             </div>
           </div><!-- End Info Item -->
 
