--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Over the years, LUNATE has become a trusted partner for many clients, offering a
         <br>
         <p> The company has completed many successful projects, ranging from residential to commercial. They have worked with Indonesian leading architects, designers, and developers to create unique, functional, and aesthetically pleasing interiors.</p>
         <br>
-        <p> LUNATE is currently active in the interior design industry since its inception, being part of many exlusive projects.
+        <p> LUNATE is currently active in the interior design industry since its inception, being part of many exlucive projects.
 Their team of experienced professionals strives to provide their clients with the highest quality of service and to make sure that their clients’ projects are completed on time and within budget.</p>
       </div>
     </section><!-- End Services Section -->
