--- a/projects.html
+++ b/projects.html
@@ -163,12 +163,12 @@
 			  
 		  		  
           <!--Baik - Baik villa -->
-            <div class="col-lg-4 col-md-6 portfolio-item filter-ex filter-in">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-ex ">
               <div class="portfolio-content h-100">
                 <img src="assets/img/projects/Cluster_bali/index.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>LH HOUSE</h4>
-                  <a href="assets/img/projects/Cluster_bali/index.jpg" title="LH HOUSE Jakarta, 2023 &copy; PT Lunate Elemen Artistika" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <h4>Baik - Baik villa</h4>
+                  <a href="assets/img/projects/Cluster_bali/index.jpg" title="Baik - Baik villa Bali, 2023 &copy; PT Lunate Elemen Artistika" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
 
@@ -180,25 +180,25 @@
 
               <div class="portfolio-content h-100">
                 <div class="portfolio-info">
-                  <a href="assets/img/projects/Cluster_bali/index3.png" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+                  <a href="assets/img/projects/Cluster_bali/index3.jpg" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
                 </div>
               </div>
 
               <div class="portfolio-content h-100">
                 <div class="portfolio-info">
-                  <a href="assets/img/projects/Cluster_bali/index4.png" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+                  <a href="assets/img/projects/Cluster_bali/index4.jpg" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
                 </div>
               </div>
 
               <div class="portfolio-content h-100">
                 <div class="portfolio-info">
-                  <a href="assets/img/projects/Cluster_bali/index5.png" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+                  <a href="assets/img/projects/Cluster_bali/index5.jpg" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
                 </div>
               </div>
 
               <div class="portfolio-content h-100">
                 <div class="portfolio-info">
-                  <a href="assets/img/projects/Cluster_bali/index6.png" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+                  <a href="assets/img/projects/Cluster_bali/index6.jpg" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
                 </div>
               </div>
 	
