--- a/index.html
+++ b/index.html
@@ -156,8 +156,28 @@ Furthermore, we integrate the execution into an inspiring space.</p>
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
+                  <img src="assets/img/testimonials/6.png" class="testimonial-img" alt="">
+                  <h3>Key Luviana Bren</h3>
+                  <h4>ADMINISTRATION & IT DESIGN STAFF</h4>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-wrap">
+                <div class="testimonial-item">
                   <img src="assets/img/testimonials/5.png" class="testimonial-img" alt="">
                   <h3>Robenhard</h3>
+                  <h4>SUPERVISOR</h4>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-wrap">
+                <div class="testimonial-item">
+                  <img src="assets/img/testimonials/5.png" class="testimonial-img" alt="">
+                  <h3>Tombak Matahari</h3>
                   <h4>SUPERVISOR</h4>
                 </div>
               </div>
@@ -193,22 +213,12 @@ Furthermore, we integrate the execution into an inspiring space.</p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
-			
-          <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="assets/img/testimonials/6.png" class="testimonial-img" alt="">
-                  <h3>Key Luviana Bren</h3>
-                  <h4>IT STAFF</h4>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
 
 	<div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/5.png" class="testimonial-img" alt="">
-                  <h3>Muhammad erlangga</h3>
+                  <h3>Muhammad Erlangga</h3>
                   <h4>INTERIOR DESIGNER</h4>
                 </div>
               </div>
@@ -218,7 +228,7 @@ Furthermore, we integrate the execution into an inspiring space.</p>
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/5.png" class="testimonial-img" alt="">
-                  <h3>Akmal fatahillah</h3>
+                  <h3>Akmal Fatahillah</h3>
                   <h4>ARCHITECT</h4>
                 </div>
               </div>
@@ -365,7 +375,7 @@ Their team of experienced professionals strives to provide their clients with th
                 <a href="mailto:lunate.ea@gmail.com" class="d-flex align-items-center justify-content-center"><i class="bi bi-envelope"></i></a>
                 <a href="https://wa.me/6285216910433" class="d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
                 <a href="https://www.instagram.com/lunate.elemen.artistika" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=100067537028468" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a
+                <a href="https://www.facebook.com/profile.php?id=100067537028468" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
               </div>
             </div>  
         </div>
