--- a/projects.html
+++ b/projects.html
@@ -167,7 +167,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/projects/Cluster_bali/index.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Baik - Baik villa</h4>
+                  <h4>Baik - Baik Villa</h4>
                   <a href="assets/img/projects/Cluster_bali/index.jpg" title="Baik - Baik villa Bali, 2023 &copy; PT Lunate Elemen Artistika" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
@@ -1832,6 +1832,79 @@
                 </div>
               </div>
 			 </div><!-- End Projects Item -->
+
+		  <!--KAYU PUTIH HOUSE-->
+      <div class="col-lg-4 col-md-6 portfolio-item filter-ex">
+        <div class="portfolio-content h-100">
+          <img src="assets/img/projects/Shila/index.JPG" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>SHILA AT SAWANGAN - F6 HOUSE</h4>
+            <a href="assets/img/projects/Shila/index.JPG" title="SHILA AT SAWANGAN - F6 HOUSE, 2025 &copy; PT Lunate Elemen Artistika" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-content h-100">
+          <div class="portfolio-info">
+            <a href="assets/img/projects/Shila/index1.JPG" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+          </div>
+        </div>
+  
+        <div class="portfolio-content h-100">
+          <div class="portfolio-info">
+            <a href="assets/img/projects/Shila/index2.JPG" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+          </div>
+        </div>
+  
+        <div class="portfolio-content h-100">
+          <div class="portfolio-info">
+            <a href="assets/img/projects/Shila/index3.JPG" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+          </div>
+        </div>
+
+        <div class="portfolio-content h-100">
+          <div class="portfolio-info">
+            <a href="assets/img/projects/Shila/index4.JPG" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+          </div>
+        </div>
+
+        <div class="portfolio-content h-100">
+          <div class="portfolio-info">
+            <a href="assets/img/projects/Shila/index5.JPG" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+          </div>
+        </div>
+
+        <div class="portfolio-content h-100">
+          <div class="portfolio-info">
+            <a href="assets/img/projects/Shila/index6.JPG" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+          </div>
+        </div>
+
+        <div class="portfolio-content h-100">
+          <div class="portfolio-info">
+            <a href="assets/img/projects/Shila/index7.JPG" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+          </div>
+        </div>
+
+        <div class="portfolio-content h-100">
+          <div class="portfolio-info">
+            <a href="assets/img/projects/Shila/index8.JPG" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+          </div>
+        </div>
+
+        <div class="portfolio-content h-100">
+          <div class="portfolio-info">
+            <a href="assets/img/projects/Shila/index9.JPG" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+          </div>
+        </div>
+
+        <div class="portfolio-content h-100">
+          <div class="portfolio-info">
+            <a href="assets/img/projects/Shila/index10.JPG" data-gallery="portfolio-gallery-ksj" class="glightbox preview-link"></a>
+          </div>
+        </div>
+ </div><!-- End Projects Item -->
+
+ </div><!-- End Projects Item -->
 
 
     </section><!-- End Our Projects Section -->
