--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -1833,7 +1831,7 @@
               </div>
 			 </div><!-- End Projects Item -->
 
-		  <!--KAYU PUTIH HOUSE-->
+		  <!--SHILA AT SAWANGAN - F6 HOUSE-->
       <div class="col-lg-4 col-md-6 portfolio-item filter-ex">
         <div class="portfolio-content h-100">
           <img src="assets/img/projects/Shila/index.JPG" class="img-fluid" alt="">
